--- a/project.json
+++ b/project.json
@@ -1,5 +1,5 @@
 {
-  "image": "https://raw.githubusercontent.com/Bensha025/Challenge-Litealura/master/assets/preview.png",
+  "image": "https://raw.githubusercontent.com/Bensha025/Challenge-Litealura/master/assets/preview.webp",
   "tecnologias": ["HTML", "CSS", "JavaScript"],
   "descripcion": "Sitio web personal con animaciones e interacciones modernas."
 }
